K8s/Manifests/loki+promtail/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.loki.z3cyber.pro`)
      kind: Rule
      services:
        - name: loki
          port: 3100
    - match: Host(`loki.z3cyber.pro`)
      kind: Rule
      services:
        - name: loki
          port: 3100
      middlewares:
        - name: default-headers
  tls:
    secretName: production-cert-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: monitoring
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
